--- a/demo/BFC/index.html
+++ b/demo/BFC/index.html
@@ -5,9 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BFC</title>
 </head>
+
+<style>
+  html {
+    background: #2a9d8f;
+  }
+  body {
+    background: #e9c46a;
+  }
+  .parent {
+    width: 200px;
+    height: 200px;
+    margin: 50px;
+    background: #f4a261;
+  }
+  .child {
+    width: 50px;
+    height: 50px;
+    margin: 20px;
+    background: #e76f51;
+  }
+</style>
 <body>
-  <p></p>
-  <p></p>
-  <p></p>
+  <div class='parent'>
+    <div class='child'></div>
+  </div>
 </body>
 </html>
