--- a/HTML&CSS/imooc/01-盒模型.html
+++ b/HTML&CSS/imooc/01-盒模型.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>css demo</title>
+  <title>盒模型的宽度如何计算</title>
   <style>
     #div1 {
       box-sizing: border-box;
