--- a/JavaScript/imooc/demo/index.html
+++ b/JavaScript/imooc/demo/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./typeof.js"></script>
+  <button id="btn">click me</button>
+  <div id="root"></div>
+  <script src="./作用域和闭包/create-10-a-tag.js"></script>
 </body>
 </html>
