--- a/JavaScript/手写代码&算法/index.html
+++ b/JavaScript/手写代码&算法/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Demo</title>
 </head>
 <body>
-  <script src='./js高级程序设计/promise/executor控制promise状态.js'></script>
+  <script src="./call.js"></script>
 </body>
 </html>
