--- a/JavaScript/构造函数/index.html
+++ b/JavaScript/构造函数/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src='./js高级程序设计/promise/executor控制promise状态.js'></script>
+  <script src="./demo.js"></script>
 </body>
 </html>
