--- a/JavaScript/异步/index.html
+++ b/JavaScript/异步/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src='./js高级程序设计/promise/executor控制promise状态.js'></script>
+  <script src='./promise-demo/loadScript.js'></script>
 </body>
 </html>
