--- a/HTML&CSS/imooc/03-margin-负值.html
+++ b/HTML&CSS/imooc/03-margin-负值.html
@@ -12,6 +12,7 @@
       float: left;
     }
     .clearfix:after {
+      /* 清除浮动 */
       content: '';
       display: table;
       clear: both;
@@ -30,6 +31,18 @@
     .container .border-red {
       border: 1px solid red;
     }
+    .top {
+      margin-top: -20px;
+    }
+    .left {
+      margin-left: -20px;
+    }
+    .bottom {
+      margin-bottom: -20px;
+    }
+    .right {
+      margin-right: -20px;
+    } 
   </style>
 </head>
 <body>
