--- a/HTML&CSS/imooc/04-bfc.html
+++ b/HTML&CSS/imooc/04-bfc.html
@@ -21,6 +21,7 @@
   <div class="container bfc">
     <img src="./img/baseline.png" class="left" style="margin-right: 10px; width: 300px;"/>
     <p class="bfc">一段文字</p>
+    <p class="left">一段文字2</p>
   </div>
 </body>
 </html>
