--- a/JavaScript/imooc/js异步/demo/index.html
+++ b/JavaScript/imooc/js异步/demo/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>异步</title>
 </head>
 <body>
-  <button id="btn">click me</button>
-  <div id="root"></div>
-  <script src="./变量类型和计算/手写深拷贝.js"></script>
+  <script src="./setTimeout笔试题.js"></script>
 </body>
 </html>
