--- a/JavaScript/imooc/demo/index.html
+++ b/JavaScript/imooc/demo/index.html
@@ -8,6 +8,6 @@
 <body>
   <button id="btn">click me</button>
   <div id="root"></div>
-  <script src="./变量类型和计算/手写深拷贝.js"></script>
+  <script src="./作用域和闭包/bind-demo.js"></script>
 </body>
 </html>
