--- a/JavaScript/异步/index.html
+++ b/JavaScript/异步/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src='./promise-demo/event-loop-demo-01.js'></script>
+  <script src='./promise-demo/promise只对失败感兴趣.js'></script>
 </body>
 </html>
