--- a/JavaScript/imooc/js异步/demo/index.html
+++ b/JavaScript/imooc/js异步/demo/index.html
@@ -6,6 +6,14 @@
   <title>异步</title>
 </head>
 <body>
-  <script src="./setTimeout笔试题.js"></script>
+  <button id="btn1">submit</button>
+  <!-- <script>
+    console.log('Hi');
+    $('#btn1').click(function(e){
+      console.log('button clicked');
+    })
+    console.log('Bye');
+  </script> -->
+  <script src="./DOM事件和event loop的关系.js"></script>
 </body>
 </html>
