--- a/运行环境/demo/debounce.html
+++ b/运行环境/demo/debounce.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>debounce</title>
 </head>
 <body>
-  <button id="btn">click me</button>
-  <div id="root"></div>
-  <script src="./真题模拟/数组去重.js"></script>
+  <input type="text" id="input1">
+  <script src="./debounce.js"></script>
 </body>
 </html>
