--- a/JavaScript/珠峰手写promise/index.html
+++ b/JavaScript/珠峰手写promise/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src='./01callback.js'></script>
+  <script src='./all/04all.js'></script>
 </body>
 </html>
